2022-01-09  Morten Welinder  <terra@gnome.org>

	* src/rendered-value.c (gnm_rendered_value_new): Work around Pango
	bug 653, see Gnumeric bug 607.  Pango is fixing the issue, but we
	need to deal with the situation.  In the long run, something based
	on pango_attr_list_change should probably be used.

2021-12-26  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-read.c (xml_cell_set_array_expr): Take position as
	argument; fix non-cell case.
	(xml_sax_cell_content): Fix crash on inter-gnumeric array formula
	paste.  [#606]

2021-10-04  Morten Welinder  <terra@gnome.org>

	* src/dependent.c (link_unlink_funcall): Ignore excess arguments.

2021-09-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/graph.c (gnm_go_data_vector_load_values): make sure that the
	GO_DATA_HAS_VALUE flag is always set when needed. Fixes #595.

2021-09-18  Jean Brefort  <jean.brefort@normalesup.org>

	* src/graph.c (gnm_go_data_vector_get_value): fix error bars when data
	are in a multi-column array. [#594]

2021-06-10  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2021-06-10  Morten Welinder <terra@gnome.org>

	* Release 1.12.50

2021-05-05  Morten Welinder  <terra@gnome.org>

	* src/workbook.c (workbook_cells): Avoid undefined behaviour.

2021-05-04  Morten Welinder  <terra@gnome.org>

	* src/rangefunc.c (gnm_range_adtest): Avoid integer overflow.

2021-03-29  Morten Welinder  <terra@gnome.org>

	* src/hlink.h (GNM_HLINK_EXTERNAL_TYPE): Add checker macro.

2021-03-19  Morten Welinder  <terra@gnome.org>

	* src/commands.c (cmd_sort_undo): Paste cell comments too.

2021-03-14  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2021-03-14  Morten Welinder <terra@gnome.org>

	* Release 1.12.49

2021-02-22  Jean Brefort  <jean.brefort@normalesup.org>

	reviewed by: <delete if not using a buddy>

	* src/sheet-object-graph.c (sog_update_graph_size),
	(gnm_sog_bounds_changed):

2021-02-21  Jean Brefort  <jean.brefort@normalesup.org>
