@@ -14,6 +14,7 @@ Morten:
 	* Fix inter-gnumeric array formula paste crash.  [#606]
 	* Avoid re-querying file existance for recent files.  [Part of #602]
 	* Fix rich-text rendering (based on work of Jean).  [#607]
+	* Fix crash with conditional styling.  [#597]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.50
